[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thecobs"
version = "0.0.21"
authors = [
  { name = "Leendert Hayen", email="leendert.hayen@gmail.com"},
]
description = "A package to calculate precise beta spectrum shapes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy~=1.24.1",
  "scipy~=1.10.0",
  "pandas~=1.5.3",
]

[project.urls]
"Homepage" = "https://github.com/leenderthayen/thecobs"
"Bug Tracker" = "https://github.com/leenderthayen/thecobs/issues"
